# python

django/wagteil_template/: pyproject.toml
django/wagteil_template/irk_ru/: Dockerfile  manage.py
django/wagteil_template/irk_ru/home/: models.py
django/wagteil_template/irk_ru/home/migrations/: 0001_initial.py
django/wagteil_template/irk_ru/irk_ru/: urls.py  wsgi.py
django/wagteil_template/irk_ru/irk_ru/settings/: base.py  dev.py
django/wagteil_template/irk_ru/irk_ru/templates/: base.html
django/wagteil_template/irk_ru/main/: models.py
other_project/irk/irk_django/: pyproject.toml
other_project/irk/irk_django/admin_irk/about/: admin.py  forms.py  helpers.py
other_project/irk/irk_django/admin_irk/admin_irk/: urls.py
other_project/irk/irk_django/admin_irk/adv/: admin.py  admin_views.py  fields.py  helpers.py  models.py
other_project/irk/irk_django/admin_irk/adv_cabinet/: models.py  urls.py
other_project/irk/irk_django/admin_irk/adwords/: admin.py  models.py  urls.py  views.py
other_project/irk/irk_django/admin_irk/afisha/: order_helpers.py  permissions.py  tasks.py  user_options.py
other_project/irk/irk_django/admin_irk/api/: __init__.py  admin.py  fields.py  forms.py  models.py  permissions.py  reverse.py
other_project/irk/irk_django/admin_irk/authentication/: backends.py  helpers.py  pipeline.py  tasks.py  urls.py
other_project/irk/irk_django/admin_irk/blogs/: helpers.py  permissions.py
other_project/irk/irk_django/admin_irk/comments/: admin.py  forms.py  helpers.py  models.py  permissions.py  user_options.py
other_project/irk/irk_micro/: pyproject.toml  route.py  state.py
other_project/irk/irk_micro/models/: model.py
(+2042 files in other folders)
