[tool.poetry]
name = "irk_django"
version = "0.1.0"
description = ""
authors = ["Ваше Имя <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
Pillow = "^8.3.0"
pytils = "^0.3"
django-select2 = "^7.7.1"
requests = "^2.25.1"
celery = "^5.1.2"
memcache = "^0.7.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
