[tool.poetry]
name = "irk_micro"
version = "0.1.0"
description = ""
authors = ["Ваше Имя <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
loguru = "^0.5.3"
fastapi-users = {extras = ["tortoise-orm"], version = "^6.1.0"}
Jinja2 = "^3.0.1"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
